# pyramex

./: .env.example  .gitignore  COMPLETION_NOTICE.md  CONTRIBUTING.md  EXECUTION_PLAN.md  FINAL_COMPLETION_REPORT.md  FINAL_RELEASE_READINESS_REPORT.md  FINAL_REPORT_GITHUB_READY.md  GITHUB_MANUAL_SETUP.md  GITHUB_RELEASE_GUIDE.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN_PYRAMEX.md  LICENSE  NOTICE.md  PHASE4_COMPLETION_REPORT.md  PHASE5_BUILD_REPORT.md  PROGRESS_REPORT.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_SUMMARY_CN.md  PUSH_COMMANDS.md  PUSH_TO_GITHUB_GUIDE.md  PYPI_CHECKLIST.md  README.md  README_DOCKER.md  README_LOCAL.md  RELEASE_CHECKLIST.md  RELEASE_SUCCESS_SUMMARY.md  STATUS_SUMMARY.md  SUCCESS_REPORT.md  TASK_COMPLETION_REPORT.md  TASK_FINAL_SUMMARY.md  create_release.sh  docker-compose.yml  progress_phase1.md  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements-web.txt  requirements.txt  setup.py  (+1 more)
.github/workflows/: ci.yml
docker/: Dockerfile.app  Dockerfile.web  Dockerfile.worker
docs/: DOCKER_DEVELOPMENT_PROGRESS.md  EMAIL_TO_DUANBO.md  EXECUTIVE_SUMMARY.md  FEISHU_SEND_FAILED.md  PROJECT_PLAN_GPU_OLLAMA_DOCKER.md  README_DOWNLOAD.md  SERVER_CONFIG_ANALYSIS.md  api.md  installation.md  tutorial.md  user_guide.md
docs/reports/: FINAL_COMPLETION_REPORT_V0.1.0-BETA.md  v0.1.0-beta_release_report.md
examples/: README.md  ex1_basic_analysis.py  ex2_ml_classification.py  ex3_quality_control.py  ex4_dimensionality_reduction.py  ex5_batch_processing.py  ex6_validation.py  ex7_optimization.py  optimization_report.csv  tutorial.ipynb  validation_report.csv
nginx/: nginx.conf
pyramex/: __init__.py
pyramex/api/: __init__.py  main.py
pyramex/core/: __init__.py  ramanome.py
pyramex/features/: __init__.py  reduction.py
pyramex/io/: __init__.py  loader.py
pyramex/ml/: __init__.py  integration.py
pyramex/preprocessing/: __init__.py  processors.py
pyramex/qc/: __init__.py  methods.py
pyramex/visualization/: __init__.py  plots.py
pyramex/web/: __init__.py  app.py
pyramex/worker/: __init__.py  gpu_worker.py
scripts/: check_sensitive_info.sh  deploy.sh  init_db.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_features.py  test_integration.py  test_io.py  test_ml.py  test_performance.py  test_preprocessing.py  test_qc.py  test_visualization.py  test_web.py  test_worker.py
